manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotels
  labels:
    name: hotels
