manifests/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hotels-database
  namespace: hotels
spec:
  serviceName: hotels-database-service
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: hotels-database-data
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: hotels-database-data
          persistentVolumeClaim:
            claimName: hotels-database-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: hotels-database-service
  namespace: hotels
spec:
  selector:
    app: postgresql 
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
